--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,7 @@
 .about-me {
   position: relative;
   font-size: 1.1rem;
-  letter-spacing: 0.5;
+  letter-spacing: 0.04rem;
 }
 
 .emoji {
