--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -8,7 +8,7 @@
   font-size: 0.85rem;
   font-weight: 400;
   text-decoration: none;
-  letter-spacing: 1;
+  letter-spacing: 0.05rem;
 }
 
 .link:hover {
